--- a/routing/components/About/about.html
+++ b/routing/components/About/about.html
@@ -1,2 +1,3 @@
 <h1 style="margin-left: 32%">Come to Casablanca! </h1>
+<center>Chances are Casablanca isn’t going to meet romantic Hollywood expectations. <br>But, as the largest Moroccan city, it’s the place to get to know the culture, history and people of Morocco. <br>It’s also a great, centrally-located base for adventuring down the coast.</center>
 <img id="shivuk_img" ng-src="../../routing/resources/img/Shivuk.jpg"/>
