SO MANY CHANGESSSS

--- a/routing/components/Favorites/favorites.html
+++ b/routing/components/Favorites/favorites.html
@@ -4,7 +4,13 @@
     <tr>
             <td ng-repeat="(id, poi) in fvrtlCtrl.fav_pois">
                 <a href="#/singlePOI"> <span ng-bind="poi.name"></span></a>
-                <a ng-click="fvrtlCtrl.savePOI(poi.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{poi.poi_saved}}.png"/></a><span ng-show="poi.poi_saved=full_heart"></span>
+                <span ng-show="poi.poi_saved=='full_heart'">
+                    <a ng-click="fvrtlCtrl.removePOI(poi.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{poi.poi_saved}}.png"/></a>
+                </span>
+                <span ng-show="poi.poi_saved=='empty_heart'">
+                        <a ng-click="fvrtlCtrl.savePOI(poi.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{poi.poi_saved}}.png"/></a>
+                </span>
+                <br> 
                 <br> 
                 <a href="#/singlePOI"><img ng-style="{'height': '100px','width': '150px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
                 <br>
