--- a/routing/components/Favorites/favorites.html
+++ b/routing/components/Favorites/favorites.html
@@ -3,7 +3,7 @@
 <table id="fav_fav_table">
     <tr>
             <td ng-repeat="(id, poi) in fvrtlCtrl.fav_pois">
-                <a href="#/singlePOI"> <span ng-bind="poi.name"></span></a>
+                <a ng-click="fvrtlCtrl.singlePOI(poi.name)"> <span class="pois_click" ng-bind="poi.name"></span></a>
                 <span ng-show="poi.poi_saved=='full_heart'">
                     <a ng-click="fvrtlCtrl.removePOI(poi.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{poi.poi_saved}}.png"/></a>
                 </span>
@@ -12,19 +12,7 @@
                 </span>
                 <br> 
                 <br> 
-                <a href="#/singlePOI"><img ng-style="{'height': '100px','width': '150px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
-                <br>
-                Point rank: <span ng-bind="poi.poi_rank"></span>
-                <br>
-                <span ng-bind="poi.num_of_views"></span> People have viewed this point!
-                <br>
-                <span ng-bind="poi.poi_description"></span>
-                <br>
-                Point reviews:
-                <br>
-                Review 1: <span ng-bind="poi.poi_review1"></span>
-                <br>
-                Review 2: <span ng-bind="poi.poi_review2"></span>
+                <a ng-click="fvrtlCtrl.singlePOI(poi.name)"><img class="pois_click" ng-style="{'height': '100px','width': '150px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
                 <br>
                 </td>
     </tr>
