--- a/routing/components/Favorites/favorites.html
+++ b/routing/components/Favorites/favorites.html
@@ -19,3 +19,8 @@
             
     
 </table>
+<span class="side_spans" ng-show="fvrtlCtrl.noPoisForUser"><img id="balloon" ng-src="../../routing/resources/img/hot-air-balloon.png"/>We recommend you start saving some points... :)</span>
+<br>
+<br>
+<br>
+<img id="save_favs_img" ng-show="!fvrtlCtrl.noPoisForUser" ng-click="fvrtlCtrl.saveFavoritesToDB()" ng-src="../../routing/resources/img/book-bag.png"/>
