--- a/routing/components/RegisteredUsers/ru.html
+++ b/routing/components/RegisteredUsers/ru.html
@@ -25,7 +25,7 @@ Hello <span ng-bind="ruCtrl.userName"></span>!
     
 </table>
 <br>
-<p class="side_spans">2 most recent points of interest saved by <span ng-bind="ruCtrl.userName"></span>'s favourite categories:</p>
+<p class="side_spans"><span ng-bind="ruCtrl.NumOfSavedPois"></span> most recent points of interest saved by <span ng-bind="ruCtrl.userName"></span>'s favourite categories:</p>
 
 
 <table id="ru_recent_table">
