--- a/routing/components/SinglePOI/singlePOI.html
+++ b/routing/components/SinglePOI/singlePOI.html
@@ -9,15 +9,15 @@
             <tr>
                 <span ng-bind="sglCtrl.current_poi.name"></span>
                 <br> 
-                <img ng-style="{'height': '100px','width': '150px', 'border-radius': '10px'}" ng-src="../../tokens{{sglCtrl.current_poi.poi_img}}">
+                <img ng-style="{'height': '300px','width': '500px', 'border-radius': '10px'}" ng-src="../../tokens{{sglCtrl.current_poi.poi_img}}">
                 <br>
-                Point rank: <span ng-bind="sglCtrl.current_poi.poi_rank"></span>
+                Point rank: <span ng-bind="sglCtrl.current_poi.poi_rank"></span>%
                 <br>
                 <span ng-bind="sglCtrl.current_poi.num_of_views"></span> People have viewed this point!
                 <br>
                 <span ng-bind="sglCtrl.current_poi.poi_description"></span>
                 <br>
-                Point reviews:
+                Point reviews
                 <br>
                 Review 1: <span ng-bind="sglCtrl.current_poi.poi_review1"></span>
                 <br>
