--- a/routing/resources/style.css
+++ b/routing/resources/style.css
@@ -123,6 +123,12 @@ body{
 	margin-left: 50% ;
 	cursor: pointer;
 }
+#sortFavs{
+	margin-left: 50% ;
+	cursor: pointer;
+}
+
+
 /* The Modal (background) */
 
 
