--- a/routing/components/Favorites/favorites.html
+++ b/routing/components/Favorites/favorites.html
@@ -13,7 +13,7 @@
                 <br> 
                 <a ng-click="fvrtlCtrl.singlePOI(poi.name)"><img class="pois_click" ng-style="{'height': '100px','width': '150px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
                 <br>
-                <input ng-click="fvrtlCtrl.insert(poi.name)" ng-model="fvrtlCtrl.stam[$index].checked" type = "checkbox">Select point</input>
+                <input ng-show="fvrtlCtrl.sortMode" ng-click="fvrtlCtrl.insert(poi.name)" ng-model="fvrtlCtrl.stam[$index].checked" type = "checkbox">Select point</input>
                 </td>
     </tr>
             
@@ -23,11 +23,13 @@
 <br>
 <br>
 <br>
-<span ng-show="!fvrtlCtrl.noPoisForUser">
+<img id="save_favs_img" ng-show="!fvrtlCtrl.noPoisForUser" ng-click="fvrtlCtrl.saveFavoritesToDB()" ng-src="../../routing/resources/img/book-bag.png"/>
+<br>
+<br>
+<img ng-click="fvrtlCtrl.goToSortMode()" id="sortFavs" ng-src="../../routing/resources/img/sort.png"/>
 
-<img id="save_favs_img" ng-click="fvrtlCtrl.saveFavoritesToDB()" ng-src="../../routing/resources/img/book-bag.png"/>
+<span ng-show="!fvrtlCtrl.noPoisForUser && fvrtlCtrl.sortMode">
 
-<span class="side_spans"><img id="sortFavs" ng-src="../../routing/resources/img/sort.png"/></span>
 <h3>Order of POIS</h3>
 <table ng-repeat="x in fvrtlCtrl.stam">
         <tr ng-show="x.checked">
